tests/baselines/reference/parserStatementIsNotAMemberVariableDeclaration1.errors.txt
==== tests/cases/compiler/parserStatementIsNotAMemberVariableDeclaration1.ts (2 errors) ====
    return {
    ~~~~~~
!!! parserStatementIsNotAMemberVariableDeclaration1.ts(1,1): error TS1108: 'return' statement must be contained within a function body.
    
      "set": function (key, value) {
    
        // 'private' should not be considered a member variable here.
        private[key] = value;
        ~~~~~~~
!!! parserStatementIsNotAMemberVariableDeclaration1.ts(6,5): error TS2095: Cannot find name 'private'.
    
      }
    
    };